test_regress/t/t_class_super_new_noextend_bad.v
// DESCRIPTION: Verilator: Verilog Test module
//
// This file ONLY is placed under the Creative Commons Public Domain, for
// any use, without warranty, 2025 by Wilson Snyder.
// SPDX-License-Identifier: CC0-1.0
//

class Cls;
  function new();
    super.new();  // Bad - no extends
  endfunction
endclass
